--- a/Data_Analysis/Data_Analysis.ipynb
+++ b/Data_Analysis/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sig_Results=pd.read_csv(\"./Step 3 Path/significant_results.tsv\",delimiter=\"\\t\")\n",
+    "Sig_Results=pd.read_csv(\"./Pathways_MaAslin/significant_results.tsv\",delimiter=\"\\t\")\n",
     "Filter_By_pval=(Sig_Results['pval']<0.05)&(Sig_Results['qval']<0.05)\n",
     "Sig_Results= Sig_Results.loc[Filter_By_pval]"
    ]
@@ -51,222 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature</th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>value</th>\n",
-       "      <th>coef</th>\n",
-       "      <th>stderr</th>\n",
-       "      <th>N</th>\n",
-       "      <th>N.not.0</th>\n",
-       "      <th>pval</th>\n",
-       "      <th>qval</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>X673</td>\n",
-       "      <td>DSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.318167</td>\n",
-       "      <td>0.011826</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.512774e-08</td>\n",
-       "      <td>0.000104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>X811</td>\n",
-       "      <td>DSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.333693</td>\n",
-       "      <td>0.012773</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.080961e-08</td>\n",
-       "      <td>0.000104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>X673</td>\n",
-       "      <td>RCEwDSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.318167</td>\n",
-       "      <td>0.016725</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.759777e-07</td>\n",
-       "      <td>0.000456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>X811</td>\n",
-       "      <td>RCEwDSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.333693</td>\n",
-       "      <td>0.018064</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.377835e-07</td>\n",
-       "      <td>0.000456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>X1541</td>\n",
-       "      <td>DSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.789612</td>\n",
-       "      <td>0.046589</td>\n",
-       "      <td>12</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6.100096e-07</td>\n",
-       "      <td>0.000625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>X1174</td>\n",
-       "      <td>RCE_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>1.300906</td>\n",
-       "      <td>0.284811</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2.581434e-03</td>\n",
-       "      <td>0.048045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>363</th>\n",
-       "      <td>X404</td>\n",
-       "      <td>DSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>0.415552</td>\n",
-       "      <td>0.091154</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2.608609e-03</td>\n",
-       "      <td>0.048284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>X1696</td>\n",
-       "      <td>DSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>0.336030</td>\n",
-       "      <td>0.073708</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2.608308e-03</td>\n",
-       "      <td>0.048284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>X469</td>\n",
-       "      <td>RCEwDSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-1.036158</td>\n",
-       "      <td>0.227491</td>\n",
-       "      <td>12</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2.621324e-03</td>\n",
-       "      <td>0.048387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>366</th>\n",
-       "      <td>X641</td>\n",
-       "      <td>RCEwDSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>1.090358</td>\n",
-       "      <td>0.240251</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2.672757e-03</td>\n",
-       "      <td>0.049202</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>317 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    feature      metadata value      coef    stderr   N  N.not.0  \\\n",
-       "0      X673      DSS_only  TRUE -0.318167  0.011826  12        3   \n",
-       "1      X811      DSS_only  TRUE -0.333693  0.012773  12        3   \n",
-       "3      X673  RCEwDSS_only  TRUE -0.318167  0.016725  12        3   \n",
-       "4      X811  RCEwDSS_only  TRUE -0.333693  0.018064  12        3   \n",
-       "7     X1541      DSS_only  TRUE -0.789612  0.046589  12        6   \n",
-       "..      ...           ...   ...       ...       ...  ..      ...   \n",
-       "362   X1174      RCE_only  TRUE  1.300906  0.284811  12        9   \n",
-       "363    X404      DSS_only  TRUE  0.415552  0.091154  12       12   \n",
-       "364   X1696      DSS_only  TRUE  0.336030  0.073708  12       12   \n",
-       "365    X469  RCEwDSS_only  TRUE -1.036158  0.227491  12        8   \n",
-       "366    X641  RCEwDSS_only  TRUE  1.090358  0.240251  12        9   \n",
-       "\n",
-       "             pval      qval  \n",
-       "0    2.512774e-08  0.000104  \n",
-       "1    3.080961e-08  0.000104  \n",
-       "3    2.759777e-07  0.000456  \n",
-       "4    3.377835e-07  0.000456  \n",
-       "7    6.100096e-07  0.000625  \n",
-       "..            ...       ...  \n",
-       "362  2.581434e-03  0.048045  \n",
-       "363  2.608609e-03  0.048284  \n",
-       "364  2.608308e-03  0.048284  \n",
-       "365  2.621324e-03  0.048387  \n",
-       "366  2.672757e-03  0.049202  \n",
-       "\n",
-       "[317 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Sex_Correlated=list(Sig_Results[Sig_Results['metadata']=='Sex']['feature'])\n",
-    "Sig_Results[~Sig_Results['feature'].isin(Sex_Correlated)]"
+    "Sig_Results=Sig_Results[~Sig_Results['feature'].isin(Sex_Correlated)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +441,7 @@
        "[211 rows x 18 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,6 +1332,296 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sig_Results.reset_index(drop=True,inplace=True)\n",
+    "for i in range(Sig_Results.shape[0]):\n",
+    "    Sig_Results.loc[i,\"feature\"]=Mapping_dict[Sig_Results.loc[i,\"feature\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sig_Results=Sig_Results[~Sig_Results['feature'].str.contains('|',regex=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sig_Results.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sig_Results.to_csv(\"Significant_Result.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>metadata</th>\n",
+       "      <th>value</th>\n",
+       "      <th>coef</th>\n",
+       "      <th>stderr</th>\n",
+       "      <th>N</th>\n",
+       "      <th>N.not.0</th>\n",
+       "      <th>pval</th>\n",
+       "      <th>qval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>X673</td>\n",
+       "      <td>DSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>-0.318167</td>\n",
+       "      <td>0.011826</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.512774e-08</td>\n",
+       "      <td>0.000104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>X811</td>\n",
+       "      <td>DSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>-0.333693</td>\n",
+       "      <td>0.012773</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.080961e-08</td>\n",
+       "      <td>0.000104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>X673</td>\n",
+       "      <td>RCEwDSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>-0.318167</td>\n",
+       "      <td>0.016725</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.759777e-07</td>\n",
+       "      <td>0.000456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>X811</td>\n",
+       "      <td>RCEwDSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>-0.333693</td>\n",
+       "      <td>0.018064</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.377835e-07</td>\n",
+       "      <td>0.000456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>X1541</td>\n",
+       "      <td>DSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>-0.789612</td>\n",
+       "      <td>0.046589</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.100096e-07</td>\n",
+       "      <td>0.000625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>X1174</td>\n",
+       "      <td>RCE_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>1.300906</td>\n",
+       "      <td>0.284811</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2.581434e-03</td>\n",
+       "      <td>0.048045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>X404</td>\n",
+       "      <td>DSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>0.415552</td>\n",
+       "      <td>0.091154</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2.608609e-03</td>\n",
+       "      <td>0.048284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>X1696</td>\n",
+       "      <td>DSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>0.336030</td>\n",
+       "      <td>0.073708</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2.608308e-03</td>\n",
+       "      <td>0.048284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>X469</td>\n",
+       "      <td>RCEwDSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>-1.036158</td>\n",
+       "      <td>0.227491</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.621324e-03</td>\n",
+       "      <td>0.048387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>X641</td>\n",
+       "      <td>RCEwDSS_only</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>1.090358</td>\n",
+       "      <td>0.240251</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2.672757e-03</td>\n",
+       "      <td>0.049202</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>317 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    feature      metadata value      coef    stderr   N  N.not.0  \\\n",
+       "0      X673      DSS_only  TRUE -0.318167  0.011826  12        3   \n",
+       "1      X811      DSS_only  TRUE -0.333693  0.012773  12        3   \n",
+       "3      X673  RCEwDSS_only  TRUE -0.318167  0.016725  12        3   \n",
+       "4      X811  RCEwDSS_only  TRUE -0.333693  0.018064  12        3   \n",
+       "7     X1541      DSS_only  TRUE -0.789612  0.046589  12        6   \n",
+       "..      ...           ...   ...       ...       ...  ..      ...   \n",
+       "362   X1174      RCE_only  TRUE  1.300906  0.284811  12        9   \n",
+       "363    X404      DSS_only  TRUE  0.415552  0.091154  12       12   \n",
+       "364   X1696      DSS_only  TRUE  0.336030  0.073708  12       12   \n",
+       "365    X469  RCEwDSS_only  TRUE -1.036158  0.227491  12        8   \n",
+       "366    X641  RCEwDSS_only  TRUE  1.090358  0.240251  12        9   \n",
+       "\n",
+       "             pval      qval  \n",
+       "0    2.512774e-08  0.000104  \n",
+       "1    3.080961e-08  0.000104  \n",
+       "3    2.759777e-07  0.000456  \n",
+       "4    3.377835e-07  0.000456  \n",
+       "7    6.100096e-07  0.000625  \n",
+       "..            ...       ...  \n",
+       "362  2.581434e-03  0.048045  \n",
+       "363  2.608609e-03  0.048284  \n",
+       "364  2.608308e-03  0.048284  \n",
+       "365  2.621324e-03  0.048387  \n",
+       "366  2.672757e-03  0.049202  \n",
+       "\n",
+       "[317 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sig_Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['X254',\n",
+       " 'X255',\n",
+       " 'X1930',\n",
+       " 'X531',\n",
+       " 'X1655',\n",
+       " 'X921',\n",
+       " 'X2033',\n",
+       " 'X279',\n",
+       " 'X1943',\n",
+       " 'X92',\n",
+       " 'X816',\n",
+       " 'X669',\n",
+       " 'X369',\n",
+       " 'X1753',\n",
+       " 'X1667',\n",
+       " 'X1227',\n",
+       " 'X1929',\n",
+       " 'X2274',\n",
+       " 'X804',\n",
+       " 'X266',\n",
+       " 'X2233']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1545,9 +1630,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('anaconda3': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python385jvsc74a57bd06240d66e354a59fbc556f1af935607572ff59ed4440b19d8c7af68da4947b349"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1559,7 +1644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
