--- a/Kraken2Outputs/Data_Analysis.ipynb
+++ b/Kraken2Outputs/Data_Analysis.ipynb
@@ -219,30 +219,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Species_TSS=Species.copy()"
+    "Species_TSS=Species.copy()\n",
+    "Group_TSS=Group.copy()\n",
+    "Family_TSS=Family.copy()\n",
+    "Phylum_TSS=Phylum.copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(Species_TSS.shape[1]):\n",
-    "    Species_TSS.iloc[:,i]=Species_TSS.iloc[:,i]/Species_TSS.iloc[:,i].sum()"
+    "    Species_TSS.iloc[:,i]=Species_TSS.iloc[:,i]/Species_TSS.iloc[:,i].sum()*100\n",
+    "for i in range(Group_TSS.shape[1]):\n",
+    "    Group_TSS.iloc[:,i]=Group_TSS.iloc[:,i]/Group_TSS.iloc[:,i].sum()*100\n",
+    "for i in range(Family_TSS.shape[1]):\n",
+    "    Family_TSS.iloc[:,i]=Family_TSS.iloc[:,i]/Family_TSS.iloc[:,i].sum()*100\n",
+    "for i in range(Phylum_TSS.shape[1]):\n",
+    "    Phylum_TSS.iloc[:,i]=Phylum_TSS.iloc[:,i]/Phylum_TSS.iloc[:,i].sum()*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Species_TSS.to_csv(\"Species_TSS.csv\")"
+    "Species_TSS.to_csv(\"Species_TSS.csv\")\n",
+    "Group_TSS.to_csv(\"Group_TSS.csv\")\n",
+    "Family_TSS.to_csv(\"Family_TSS.csv\")\n",
+    "Phylum_TSS.to_csv(\"Phylum_TSS.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5409563"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Group_TSS.iloc[:,2].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Taxonomy\n",
+       "d__Bacteria|p__Bacteroidetes|c__Bacteroidia|o__Bacteroidales|f__Muribaculaceae|g__Duncaniella               0.164779\n",
+       "d__Bacteria|p__Bacteroidetes|c__Bacteroidia|o__Bacteroidales|f__Muribaculaceae|g__Muribaculum               0.227612\n",
+       "d__Bacteria|p__Bacteroidetes|c__Bacteroidia|o__Bacteroidales|f__Muribaculaceae|g__Sodaliphilus              0.007624\n",
+       "d__Bacteria|p__Bacteroidetes|c__Bacteroidia|o__Bacteroidales|f__Bacteroidaceae|g__Bacteroides               0.093899\n",
+       "d__Bacteria|p__Bacteroidetes|c__Bacteroidia|o__Bacteroidales|f__Rikenellaceae|g__Alistipes                  0.030335\n",
+       "                                                                                                              ...   \n",
+       "d__Viruses|p__Uroviricota|c__Caudoviricetes|o__Caudovirales|f__Herelleviridae|s__Bacillus phage Eldridge    0.000004\n",
+       "d__Viruses|k__Pararnavirae|p__Artverviricota|c__Revtraviricetes|o__Ortervirales|f__Retroviridae             0.000069\n",
+       "d__Viruses|k__Bamfordvirae|p__Nucleocytoviricota|c__Megaviricetes|o__Imitervirales|f__Mimiviridae           0.000053\n",
+       "d__Viruses|k__Bamfordvirae|p__Nucleocytoviricota|c__Megaviricetes|o__Algavirales|f__Phycodnaviridae         0.000045\n",
+       "d__Viruses|k__Bamfordvirae|p__Nucleocytoviricota|c__Pokkesviricetes|o__Chitovirales|f__Poxviridae           0.000029\n",
+       "Name: Start, Length: 1370, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Group_TSS.iloc[:,i]/Group_TSS.iloc[:,i].sum()"
    ]
   },
   {
@@ -255,9 +319,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('anaconda3': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python385jvsc74a57bd06240d66e354a59fbc556f1af935607572ff59ed4440b19d8c7af68da4947b349"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -269,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
